# Sport-Data-Hub

./: README.md
Sport-Data-Hub/: pyproject.toml
Sport-Data-Hub/football/: models.py  serializers.py  urls.py  utils.py  views.py
Sport-Data-Hub/sport_data_hub/: manage.py
Sport-Data-Hub/sport_data_hub/sport_data_hub/: asgi.py  settings.py  urls.py  wsgi.py
Sport-Data-Hub/tool/: DBHelper.py  getScheduledMatchData.py  scrap_tool.py  scrape_config.py
sport-data-hub-frontend/: package-lock.json  package.json
sport-data-hub-frontend/src/app/: globals.css  layout.tsx  page.tsx
sport-data-hub-frontend/src/app/components/: dropdownWithCheckboxes.tsx  leagueDropdown.tsx  matchDropdown.tsx  table.tsx
sport-data-hub-frontend/src/app/dashboard/: page.tsx
sport-data-hub-frontend/src/app/types/: interfaces.ts
